# GeoGate

./: LICENSE  LICENSE.md  README.md
.github/actions/case_run/: action.yaml  find_python.py
.github/actions/create_env/: action.yaml  install_deps.sh
.github/actions/install_cdeps/: action.yaml
.github/actions/install_geogate/: action.yaml
.github/workflows/: test_catalyst_egl.yaml  test_catalyst_osmesa.yaml  test_plugins.yaml  test_python.yaml
.github/workflows/config/: datm.streams  datm_in  docn.streams  esmxRun.yaml  pv_two_channel.py
.github/workflows/config/catalyst/: pv_two_channel.py
.github/workflows/config/python/: esmxRun.yaml  esmxRun_python.yaml  geogate_modify.py  geogate_plot.py
.github/workflows/scripts/: install_deps.sh
docs/source/: Dependencies.rst  GeoGateProtoApps.rst  PluginCatalyst.rst  PluginPython.rst  catalyst.rst  ftorch.rst  index.rst  plugin_catalyst.rst  plugins.rst  python.rst  quick_start.rst  testing.rst
src/: CMakeLists.txt  geogate_nuopc.F90  geogate_share.F90
src/plugins/catalyst/: CMakeLists.txt  geogate_phases_catalyst.F90
src/plugins/ftorch/: CMakeLists.txt  geogate_phases_ftorch.F90  geogate_phases_ftorch_void.F90
src/plugins/io/: CMakeLists.txt  geogate_phases_io.F90
src/plugins/python/: CMakeLists.txt  geogate_phases_python.F90  geogate_python_interface.F90  geogate_python_interface.cpp  python_interpreter.cpp  python_interpreter.hpp
src/shared/: CMakeLists.txt  geogate_internalstate.F90  geogate_share.F90  geogate_types.F90
